<resources>
    <string name="app_name">ZocDoc</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="feeling_meh_nfind_a_doctor">Feeling meh? \nFind a doctor.</string>
    <string name="what_are_you_looking_for">What are you looking for?</string>
    <string name="enter_a_location">Enter a location</string>
    <string name="do_you_have_insurance">Do you have insurance?</string>
    <string name="i_ll_choose_my_insurance_later">I\'ll choose my insurance later</string>
    <string name="appointments">Appointments</string>
    <string name="appointments_summary">Your past and future appointments will be listed here whenever you book a visit. What are you waiting for, anyway?</string>
    <string name="find_a_doctor">Find a doctor</string>
    <string name="medical_team">Medical Team</string>
    <string name="medical_team_summary">Your doctors will show up here when you start booking appointments. It\'s like your personal superhero team for staying healthy.</string>
    <string name="recommended_summary">Get to know a healthier you! Tell us a bit about yourself to view your personalized wellness visits.</string>
    <string name="view_recommendations">View recommendations</string>
    <string name="gloria_lu_bio">Gloria Lu, MD, chose a career in medicine because it combined her fascination for health sciences and her desire to find a career dedicated to helping and healing people. From a young age, Dr. Lu was encouraged by her mother to be compassionate and always help others, which helped shape her career choices.
        \n\nAs a Family Medicine physician with MemorialCare Medical Group, Dr. Lu enjoys building relationships with her patients. Her interests include women\'s health and preventative care, and she loves coming up with plans that will be the best fit for her patients and enjoys seeing their progress.
        \n\nDr. Lu grew up in Northern California in a Taiwanese immigrant family and speaks Mandarin. In her free time, she enjoys singing in her a capella group, traveling, hiking, watching football and trying all sorts of different cuisines. She also loves to spend time with her husband and loved ones.</string>
    <string name="hello_name">Hello %1s</string>
</resources>