<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/backgroundColor"
    tools:context=".screens.SearchFragment">

    <ImageView android:id="@+id/imgGreenShape"
        android:layout_width="400dp"
        android:layout_height="420dp"
        android:background="@drawable/green_shape"
        android:layout_marginTop="100dp"
        android:layout_marginStart="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView android:id="@+id/lblFeelingMeh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/imgGreenShape"
        app:layout_constraintBottom_toBottomOf="@id/imgGreenShape"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="30dp"
        android:fontFamily="sans-serif"
        android:text="@string/feeling_meh_nfind_a_doctor"
        android:textStyle="bold"
        android:textColor="@color/colorOnPrimary"
        android:textSize="50sp"/>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/lblFeelingMeh"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="25dp"
        app:cardBackgroundColor="@android:color/transparent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <LinearLayout android:id="@+id/layoutCareType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp"
                android:clickable="true"
                android:background="?android:attr/selectableItemBackground"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/what_are_you_looking_for"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Primary Care Doctor"
                    android:textSize="25sp"/>

            </LinearLayout>

            <LinearLayout android:id="@+id/layoutLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp"
                android:clickable="true"
                android:background="?android:attr/selectableItemBackground"
                app:layout_constraintTop_toBottomOf="@+id/layoutCareType">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_a_location"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="California"
                    android:textSize="25sp"/>

            </LinearLayout>

            <LinearLayout android:id="@+id/layoutInsurance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp"
                android:clickable="true"
                android:background="?android:attr/selectableItemBackground"
                app:layout_constraintTop_toBottomOf="@+id/layoutLocation">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/do_you_have_insurance"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/i_ll_choose_my_insurance_later"
                    android:textSize="25sp"/>

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnFind"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/layoutInsurance"
                android:text="Find"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:padding="10dp"
                android:textSize="20sp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>