<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/backgroundColor"
    tools:context=".screens.AppointmentsFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardMedicalTeam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:contentPadding="20dp"
        android:layout_marginTop="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView android:id="@+id/lblAppointments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/medical_team"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <TextView android:id="@+id/lblAppointmentsSummary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/lblAppointments"
                android:text="@string/medical_team_summary"
                android:textSize="18sp"
                android:textColor="@color/black"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnFindDoctor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/find_a_doctor"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginTop="15dp"
                app:layout_constraintTop_toBottomOf="@+id/lblAppointmentsSummary"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.cometchat.pro.uikit.CometChatConversationList
        android:id="@+id/cometchatConversationList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/txtDate"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView android:id="@+id/lblHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnLogin"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="17sp"
        android:text="Have an account?"/>

    <TextView
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/lblHaveAccount"
        app:layout_constraintStart_toEndOf="@+id/lblHaveAccount"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingStart="5dp"
        android:text="Log in"
        android:textSize="17sp"
        android:clickable="true"
        android:textAllCaps="false"
        android:textColor="@color/colorSecondary" />

</androidx.constraintlayout.widget.ConstraintLayout>